// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link> renders 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  body={true}
  caption={false}
  ellipsizeMode="tail"
  headline={false}
  href="http://minube.com"
  level={1}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
  subtitle={false}
/>
`;

exports[`<Link> when {style} 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  body={true}
  caption={false}
  ellipsizeMode="tail"
  headline={false}
  href="http://minube.com"
  level={1}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {
        "fontSize": 20,
        "fontWeight": "700",
      },
    ]
  }
  subtitle={false}
  visible={true}
/>
`;

exports[`<Link> when {styleHover} 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  body={true}
  caption={false}
  ellipsizeMode="tail"
  headline={false}
  href="http://minube.com"
  level={1}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
  styleHover={
    Object {
      "fontSize": 20,
      "fontWeight": "700",
    }
  }
  subtitle={false}
  visible={true}
/>
`;
